# FolderChronicle

./: .gitignore  LICENSE  README.md  folderchronicle.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
folderchronicle/: __init__.py  app.py  core.py
tests/: test_core.py
