[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folderchronicle"
version = "0.1.0"
description = "Sort files into YYYY/MM folders via a simple Tkinter GUI"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["files", "organize", "gui", "tkinter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Win32 (MS Windows)",
    "Topic :: Utilities",
]
dependencies = [
    "ttkthemes>=3.2.2; platform_system != 'Linux' or python_version >= '3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5.0",
    "pyinstaller>=6.11",
]

[project.scripts]
folderchronicle = "folderchronicle.app:main"

[tool.setuptools]
packages = ["folderchronicle"]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "W", "C90", "N", "SIM", "PL",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["folderchronicle"]
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
